# smallRiceCake

./: .gitmodules  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/audio_board/: CMakeLists.txt  board.c  board_def.h  board_pins_config.c
inc/: battery.h  gui.h  vlGui_ssd1306.h
main/: CMakeLists.txt  main.c
main/gui/: gui.c  ui_home.c  ui_menu.c  vlGui_port.c  vlGui_ssd1306.c
main/inc/: btSink.h  encoder.h  gui.h  ota.h  sleep.h  vlonGui_ssd1306.h  webServer.h  wifiStation.h
main/src/: battery.c  btSink.c  encoder.c  gui.c  ota.c  sleep.c  vlonGui_port.c  vlonGui_ssd1306.c  webServer.c  wifiStation.c
submodules/: CMakeLists.txt
